src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | COMPLEX
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | PrintCompStmt ';'
  38       | DoStmt ';'

  39  DoStmt : DO DoBranchList DoSubStmt OD

  40  DoBranchList : DoBranchList DoSubStmt DOSEPERATOR
  41               |

  42  DoSubStmt : Expr ':' Stmt

  43  SimpleStmt : LValue '=' Expr
  44             | Call
  45             |

  46  Receiver : Expr '.'
  47           |

  48  LValue : Receiver IDENTIFIER
  49         | Expr '[' Expr ']'

  50  Call : Receiver IDENTIFIER '(' Actuals ')'

  51  DefaultExpr : DEFAULT ':' Expr ';'

  52  CaseExprList : CaseExprList Constant ':' Expr ';'
  53               |

  54  Expr : DCOPY '(' Expr ')'
  55       | SCOPY '(' Expr ')'
  56       | SUPER
  57       | CASE '(' Expr ')' '{' CaseExprList DefaultExpr '}'
  58       | LValue
  59       | Call
  60       | Constant
  61       | Expr '+' Expr
  62       | Expr '-' Expr
  63       | Expr '*' Expr
  64       | Expr '/' Expr
  65       | Expr '%' Expr
  66       | Expr EQUAL Expr
  67       | Expr NOT_EQUAL Expr
  68       | Expr '<' Expr
  69       | Expr '>' Expr
  70       | Expr LESS_EQUAL Expr
  71       | Expr GREATER_EQUAL Expr
  72       | Expr AND Expr
  73       | Expr OR Expr
  74       | '(' Expr ')'
  75       | '-' Expr
  76       | '!' Expr
  77       | '@' Expr
  78       | '$' Expr
  79       | '#' Expr
  80       | READ_INTEGER '(' ')'
  81       | READ_LINE '(' ')'
  82       | THIS
  83       | NEW IDENTIFIER '(' ')'
  84       | NEW Type '[' Expr ']'
  85       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  86       | '(' CLASS IDENTIFIER ')' Expr

  87  Constant : LITERAL
  88           | NULL

  89  Actuals : ExprList
  90          |

  91  ExprList : ExprList ',' Expr
  92           | Expr

  93  WhileStmt : WHILE '(' Expr ')' Stmt

  94  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  95  BreakStmt : BREAK

  96  IfStmt : IF '(' Expr ')' Stmt ElseClause

  97  ElseClause : ELSE Stmt
  98             |

  99  ReturnStmt : RETURN Expr
 100             | RETURN

 101  PrintStmt : PRINT '(' ExprList ')'

 102  PrintCompStmt : PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : COMPLEX .  (10)

	.  reduce 10


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (45)
	Receiver : .  (47)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	CASE  shift 56
	PRINT  shift 57
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	PRINTCOMP  shift 60
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	DO  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'{'  shift 42
	'}'  shift 69
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47
	';'  reduce 45

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	WhileStmt  goto 78
	ForStmt  goto 79
	ReturnStmt  goto 80
	PrintStmt  goto 81
	BreakStmt  goto 82
	PrintCompStmt  goto 83
	DoStmt  goto 84
	Expr  goto 85
	LValue  goto 86
	Call  goto 87
	Receiver  goto 88
	Constant  goto 89


state 47
	Constant : NULL .  (88)

	.  reduce 88


state 48
	Expr : THIS .  (82)

	.  reduce 82


state 49
	Expr : SUPER .  (56)

	.  reduce 56


state 50
	WhileStmt : WHILE . '(' Expr ')' Stmt  (93)

	'('  shift 90
	.  error


state 51
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (94)

	'('  shift 91
	.  error


state 52
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (96)

	'('  shift 92
	.  error


state 53
	ReturnStmt : RETURN . Expr  (99)
	ReturnStmt : RETURN .  (100)
	Receiver : .  (47)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	NEW  shift 55
	CASE  shift 56
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47
	';'  reduce 100

	Expr  goto 93
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 54
	BreakStmt : BREAK .  (95)

	.  reduce 95


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (83)
	Expr : NEW . Type '[' Expr ']'  (84)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 96
	.  error

	Type  goto 97


state 56
	Expr : CASE . '(' Expr ')' '{' CaseExprList DefaultExpr '}'  (57)

	'('  shift 98
	.  error


state 57
	PrintStmt : PRINT . '(' ExprList ')'  (101)

	'('  shift 99
	.  error


state 58
	Expr : READ_INTEGER . '(' ')'  (80)

	'('  shift 100
	.  error


state 59
	Expr : READ_LINE . '(' ')'  (81)

	'('  shift 101
	.  error


state 60
	PrintCompStmt : PRINTCOMP . '(' ExprList ')'  (102)

	'('  shift 102
	.  error


state 61
	Constant : LITERAL .  (87)

	.  reduce 87


state 62
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (85)

	'('  shift 103
	.  error


state 63
	Expr : DCOPY . '(' Expr ')'  (54)

	'('  shift 104
	.  error


state 64
	Expr : SCOPY . '(' Expr ')'  (55)

	'('  shift 105
	.  error


state 65
	DoStmt : DO . DoBranchList DoSubStmt OD  (39)
	DoBranchList : .  (41)

	.  reduce 41

	DoBranchList  goto 106


state 66
	Expr : '-' . Expr  (75)
	Receiver : .  (47)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	NEW  shift 55
	CASE  shift 56
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47

	Expr  goto 107
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 67
	Expr : '!' . Expr  (76)
	Receiver : .  (47)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	NEW  shift 55
	CASE  shift 56
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47

	Expr  goto 108
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 68
	Expr : '(' . Expr ')'  (74)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (86)
	Receiver : .  (47)

	CLASS  shift 109
	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	NEW  shift 55
	CASE  shift 56
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47

	Expr  goto 110
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 69
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 70
	Expr : '@' . Expr  (77)
	Receiver : .  (47)

	NULL  shift 47
	THIS  shift 48
	SUPER  shift 49
	NEW  shift 55
	CASE  shift 56
	READ_INTEGER  shift 58
	READ_LINE  shift 59
	LITERAL  shift 61
	INSTANCEOF  shift 62
	DCOPY  shift 63
	SCOPY  shift 64
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 47

	Expr  goto 111
	LValue  goto 94
	Call  goto 95
	Receiver  goto 88
	Constant  goto 89


state 71
	Expr : '$' . Expr  (78)
	Receiver : .  (47)
